--- a/slides/05-preamble.tex
+++ b/slides/05-preamble.tex
@@ -1,2 +1,13 @@
 \usepackage{amsmath}
 \DeclareMathOperator*{\argmin}{arg\, min}
+% Set transparency of non-highlighted sections in the table of
+% contents slide.
+\setbeamertemplate{section in toc shaded}[default][100]
+\AtBeginSection[]
+{
+  \setbeamercolor{section in toc}{fg=red} 
+  \setbeamercolor{section in toc shaded}{fg=black} 
+  \begin{frame}
+    \tableofcontents[currentsection]
+  \end{frame}
+}
