--- a/slides/05-binary-segmentation.Rmd
+++ b/slides/05-binary-segmentation.Rmd
@@ -20,20 +20,20 @@ theme_set(my.theme)
 
 # Introduction
 
-## Motivation for changepoint detection in time series data
+## Motivation for change-point detection in time series data
 
 - Detecting changes/abnormalities important in medicine.
 
 ![Electrocardiograms (heart monitoring), Fotoohinasab et al, Asilomar conference 2020.](intro-ecg)
 
-## Motivation for changepoint detection in time series data
+## Motivation for change-point detection in time series data
 
 - Detecting the time when a spike occurs is important in neuroscience.
 
 ![Neural spikes in calcium imaging data, Jewell et al, Biostatistics
 2019.](intro-neuroscience)
 
-## Motivation for changepoint detection in genomic data sequences
+## Motivation for change-point detection in genomic data sequences
 
 - Detecting breakpoints is important in diagnosis of some types of
   cancer, such as neuroblastoma.
@@ -41,14 +41,14 @@ theme_set(my.theme)
 ![DNA copy number data, breakpoints associated with aggressive cancer,
 Hocking et al, Bioinformatics 2014.](intro-breakpoints)
 
-## Motivation for changepoint detection in genomic data sequences
+## Motivation for change-point detection in genomic data sequences
 
 - Detecting peaks (up/down changes) in genomic data is important in
   order to understand which genes are active or inactive.
 
 ![ChIP-seq data for characterizing active regions in the human genome, Hocking et al, Bioinformatics 2017.](intro-peaks)
 
-## Segmentation / changepoint detection framework
+## Segmentation / change-point detection framework
 
 - Let $x_1, \dots, x_n \in\mathbb R$ be a data sequence
   over space or time (logratio column in DNA copy number data below).
@@ -62,7 +62,7 @@ one.dt <- nb.dt[profile.id==4 & chromosome==2]
 one.dt
 ```
 
-## Segmentation / changepoint data visualization
+## Segmentation / change-point data visualization
 
 - Let $x_1, \dots, x_n \in\mathbb R$ be a data sequence
   over space or time.
@@ -89,7 +89,7 @@ ggplot()+
   $k\in\{1,\dots,K\}$ we have $x_i \sim N(\mu_k, \sigma^2)$ -- normal
   distribution.
 - This normal distribution assumption means that we want to find
-  segments/changepoints with mean $m$ that minimize the square loss,
+  segments/change-points with mean $m$ that minimize the square loss,
   $(x-m)^2$.
 - Other distributional assumptions / loss functions are possible.
 
@@ -108,7 +108,7 @@ gg <- ggplot()+
 gg
 ```
 
-## Simplest model, 1 segment, 0 changepoints
+## Simplest model, 1 segment, 0 change-points
 
 ```{r}
 bs.list <- suppressWarnings(binsegRcpp::binseg_normal(one.dt[["logratio"]]))
@@ -132,13 +132,13 @@ plotK <- function(k){
 plotK(1)
 ```
 
-## Find best single changepoint (two segments)
+## Find best single change-point (two segments)
 
 ```{r}
 plotK(2)
 ```
 
-## Find two changepoints (three segments)
+## Find next best change-point (given first change)
 
 ```{r}
 plotK(3)
@@ -186,6 +186,18 @@ plotK(100)
 plotK(nrow(one.dt))
 ```
 
+## Why binary segmentation?
+
+- Dynamic programming computes \alert{one optimal model for a penalty
+  $\lambda$ in $O(n \log n)$ time} in sequence of $n$ data (see pruning
+  algorithms: PELT---Killick 2012, FPOP---Maidstone 2017, DUST---Truong and Runge 2024).
+- Binary segmentation (Scott and Knott 1974) is a simple baseline algorithm.
+- In theory, binary segmentation is extremely fast: heuristic sequence of models
+  with $1,\dots,K$ segments computed in $O(n \log K)$ time (typical/best case) or $O(n K)$ time (worst case).
+- \alert{Complete sequence of $n$ models for $n$ data in only $O(n\log n)$ time!}
+- Reviewers of my papers about dynamic programming want to see comparisons with binary segmentation: is there any difference in speed/accuracy?
+- If we run existing code for binary segmentation: does it achieve the expected time complexity? Why or why not?
+
 ## Error/loss function visualization
 
 - Let $m^{(k)}\in\mathbb R^n$ be the mean vector with $k$ segments.
@@ -224,7 +236,7 @@ $$L_{1,n} = \sum_{i=1}^n (x_i - s/n)^2 = \sum_{i=1}^n [x_i^2] - 2(s/n)s + n(s/n)
 - Given cumulative sums, and a split point $t$, we can compute square
   loss from 1 to $t$, $L_{1,t}$, and from $t+1$ to $n$, $L_{t+1,n}$,
   in constant $O(1)$ time.
-- We can minimize over all changepoints $t$ in linear $O(n)$ time,
+- We can minimize over all change-points $t$ in linear $O(n)$ time,
 $$\min_{t\in\{1,\dots,n-1\}} L_{1,t} + L_{t+1,n}$$
 
 ## First step of binary segmentation
@@ -507,7 +519,7 @@ there is a simple modification:
 \alert{e-j+1\geq 2\ell}\}
 \}$ (splittable segments)
 
-# Analysis of time complexity
+# Finite Sample Complexity Analysis of Binary Segmentation (arXiv:2410.08654)
 
 ## Visualization of computations at each iteration
 
@@ -711,7 +723,7 @@ plot.iteration()
 
 - Assume $n$ data and $K$ segments.
 - Computing best loss decrease and split point for a segment with $t$
-  data takes $O(t)$ time.
+  data takes $O(t)$ time (for square loss).
 - Keep a list of segments which could be split, sorted by loss
   decrease values.
 - Best case is when segments get cut in half each time, $O(n \log K)$
@@ -1028,8 +1040,8 @@ max_segs(8)
 - $n\in\{60,71,72,80\}$ data, min segment length $m=5$, and number of splits/iterations $K=9$.
 - Smaller $n\in\{60,71\}$ values result in a balanced first split,
 - Larger $n\in\{72,80\}$ values result in an unbalanced first split (one small child with no splits, one large child with all remaining splits).
-- [Hocking arXiv:2410.08654 Finite Sample Complexity Analysis of Binary Segmentation](https://arxiv.org/abs/2410.08654) propose algorithm to compute optimal binary tree.
-- Is binary segmentation asympototically optimal speed in real data?
+- [Hocking arXiv:2410.08654 Finite Sample Complexity Analysis of Binary Segmentation](https://arxiv.org/abs/2410.08654) propose $O(n^2 K^2)$ algorithm to compute optimal binary tree.
+- Is binary segmentation asymptotically optimal speed in real data?
 
 ## Empirical number of candidates (Poisson loss)
 
@@ -1046,7 +1058,14 @@ max_segs(8)
 - Number of candidate splits achieves the asymptotic best case, $O(n\log n)$, and in 45 instances (black circles) requires fewer candidate splits than predicted by the best case heuristic.
 - For max segments = 10, we used dynamic programming to compute the best case number of splits for all data sizes between 11 and 100 (orange line), and the heuristic (green line) was exact for only 5 data sizes $n\in\{11,12,13,18,19\}$ (purple circles).
 
-# Comparing empirical timings between implementations
+# Comparing binsegRcpp with other implementations of binary segmentation (under review at Journal of Statistical Software)
+
+## Two key steps in binary segmentation algorithm
+
+- Compute best split on a segment (red).
+- Find best segment to split (blue).
+
+\includegraphics[width=\textwidth]{05-this-previously.png}
 
 ## Analysis of insert time and storage (STL list)
 
@@ -1120,7 +1139,7 @@ $\vdots$ &     $\vdots$ &     $\vdots$  & $\vdots$ & $\vdots$ \\
 
 - Number of segments grows with data size, $K=O(N)$.
 - Best case data, square loss.
-- changepoint is $O(N^2)$ space, $O(N^3)$ time.
+- change-point is $O(N^2)$ space, $O(N^3)$ time.
 - ruptures is $O(N)$ space, $O(N^{1.4})$ time (unclear why)
 - Not asymptotic optimal complexity.
 - Sub-optimal implementation.
@@ -1134,7 +1153,7 @@ $\vdots$ &     $\vdots$ &     $\vdots$  & $\vdots$ & $\vdots$ \\
 - in 5 seconds, binsegRcpp using multiset or priority queue has 100x larger
   throughput than list.
 - about 500x larger throughput than ruptures.
-- about 1000x larger throughput than changepoint.
+- about 1000x larger throughput than change-point.
 
 ## Comparing implementations of binary segmentation
 
@@ -1150,7 +1169,7 @@ segmentation, in progress.
 - binsegRcpp map, `wbs::sbs`, `fpop::multiBinSeg` optimal: $O(n\log n)$ time in best case.
 - ruptures is between $O(n\log n)$ and $O(n^2)$ time, but with large constant factors.
 - binsegRcpp list has larger slope: $O(n^2)$ time.
-- changepoint has even larger slope: $O(n^3)$ time.
+- change-point has even larger slope: $O(n^3)$ time.
 
 ## Timings using L1 loss
 
@@ -1177,11 +1196,11 @@ segmentation, in progress.
 
 - Laplace (log-linear) is somewhat slower than others (linear).
 
-## Accuracy of binsegRcpp and changepoint
+## Accuracy of library(binsegRcpp) and library(changepoint)
 
 \includegraphics[width=\textwidth]{changepoint.bug.png}
 
-- Real data set for which changepoint does not compute the correct model.
+- Real data set for which change-point does not compute the correct model.
 - Loss should be minimized at each iteration.
 
 ## Conclusions
@@ -1192,7 +1211,7 @@ segmentation, in progress.
 - Empirical number of candidates in real data: same as best case, asymptotically.
 - Proposed binsegRcpp R package provides C++ code which is asymptotically optimal speed, and correct.
 - `install.packages("binsegRcpp")` in R.
-- Future work: faster method for computing optimal binary trees?
+- Future work: faster method for computing optimal binary trees? $O(n^2 K^2)$ time for lower bound is slower than $O(n K)$ time for algorithm itself.
 
 ## Comparison with previous algorithms from clustering
 
